--- a/BSL/bsl.tex
+++ b/BSL/bsl.tex
@@ -2385,7 +2385,7 @@ When $\Gamma_0;\Gamma_1 \bowtie \Gamma$, we write $\Gamma^{\Gamma^{x}_1}$ to ind
             \footnotesize
              \begin{array}{c}
 \proofbox{ \infer[\lright^{*}]{S \mid \Gamma_{00} , \Gamma_{01} \vdash^{x}_{\RI} \ldbc A , \Gamma''_1 \mid C \rdbc_{\lolli}}{
-     \deduce{S \mid \Gamma'^{x} , A^{x} , \Gamma''^{x} \vdash^{x}_{\RI} C}{f}
+     \deduce{S \mid \Gamma'^{\Gamma^{x}_{10}} , A^{x} , \Gamma''^{\Gamma^{x}_{11}} \vdash^{x}_{\RI} C}{f}
      &
  }
  }
@@ -2403,7 +2403,7 @@ When $\Gamma_0;\Gamma_1 \bowtie \Gamma$, we write $\Gamma^{\Gamma^{x}_1}$ to ind
                 \infer[\ex]{S \mid A^{x} \spl \Gamma_{00} , \Gamma_{01} \vdash^{x}_{\C} \ldbc \Gamma''_1 \mid C \rdbc_{\lolli}}{
                     \infer[\RI 2 \C]{S \mid ~ \spl \Gamma_{00} , A^{x} , \Gamma_{01} \vdash^{x}_{\C} \ldbc \Gamma''_1 \mid C \rdbc_{\lolli}}{
                         \infer[\lright^{*}]{S \mid \Gamma_{00} , A^{x} , \Gamma_{01} \vdash^{x}_{\RI} \ldbc \Gamma''_1 \mid C \rdbc_{\lolli}}{
-                            \deduce{S \mid \Gamma'^{x} , A^{x} , \Gamma''^{x} \vdash^{x}_{\RI} C}{f}
+                            \deduce{S \mid \Gamma'^{\Gamma^{x}_{10}} , A^{x} , \Gamma''^{\Gamma^{x}_{11}} \vdash^{x}_{\RI} C}{f}
                             &
                         }
                     }
