--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -231,7 +231,7 @@ Notice that, similarly to the case of \NMILL, all structural rules of exchange, 
       }
     \end{array}
   \end{displaymath}
-  Another interesting fact about the additive connectives is that $\andli$ in context ($\andli^{\mathsf{C}}$) are admissible however $\orl^{\mathsf{C}}$ in context is not admissible only when $A = B = \I$.
+  Another interesting fact about the additive connectives is that $\andli$ in context ($\andli^{\mathsf{C}}$) are admissible however $\orl^{\mathsf{C}}$ in context is not admissible except $A = B = \I$.
   \begin{displaymath}
     \begin{array}{c}
       \proofbox{
