--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -115,6 +115,16 @@ We believe this to be beneficial for the development of modular normalization te
 
 \section{Introduction}
 
+Intro on substructural logics: what are they, where are they used, application to natural languages, resource-sensitive programming languages, etc. 
+
+In recent years, we initiated a program intended to study a family of "semi-substructural" logics, inspired by developments in category theory by Szlachányi, Street, Bourke, Lack. Talk about skew monoidal categories and semi-associativity/semi-unitality and the skew notion of commutativity. Talk about connections to combinatorics via the work of Zeilberger on the Tamari order. We could also mentioned that Moortgat had also been interested in a semi-associative variant of the Lambek-Grishin calculus (http://cla.tcs.uj.edu.pl/history/2020/pdfs/CLA_slides_Moortgat.pdf)
+
+So far the program has considered deductive systems for skew monoidal, skew closed and a combination of both. Also extensions with exchange and partial associativity/unitality. We have mostly been interested in categorical  and proof-theoretic semantics of the developed systems. For the latter, we have investigated normalization strategies inspired by Andreoli's focused sequent calculus for classical linear logic and used normal forms to solve the coherence/word problem for many categories with skew structure. For these categories, the word problem is more nuanced than in the normal non-skew case studied by MacLane. Our investigation also disclosed that the focused sequent calculi of semi-substructural logics can serve as a cornerstone for a compositional and modular understanding of normalization for other richer substructural logics.
+
+In this work we start looking at semi-structural logics with additive connectives. We consider a fragment of non-commutative linear logic consisting of skew multiplicative unit and conjunction, and additive conjunction and disjunction. We describe a cut-free sequent calculus and a congruence relation identifying derivations up-to eta-equivalence and permutative conversions. We discuss categorical semantics in terms of skew monoidal categories with binary products and coproducts. We introduce a sequent calculus of proofs in normal form, again inspired by the ideas of Andreoli, which describes a sound and complete root-first proof search strategy for the original sequent calculus. Talk about sequents being marked by list of tags, a novelty introduced to completely remove unnecessary non-determinism and faithfully capture normal forms wrt. the equivalence of derivations in the original sequent calculus. In a sense, this is similar to what proof nets are used for.
+
+To showcase the modularity of our approach to normalization, we discuss extensions of the logic with other connectives, such as additive units and implication, and other structural rules. The work presented in Sections ... has been formalized in the Agda proof assistant and it is available at: .... We conclude our paper with a brief discussion on the formalization strategy.
+
 \section{Sequent calculus}
 We introduce a sequent calculus for a skew variant of non-commutative multiplicative intuitionistic linear logic with additive conjunction and disjunction.
 
