--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -115,11 +115,13 @@ We believe this to be beneficial for the development of modular normalization te
 
 \section{Introduction}
 
-Intro on substructural logics: what are they, where are they used, application to natural languages, resource-sensitive programming languages, etc. 
+Substructural logics are logical systems in which the usage of one or more structural rule is disallowed or restricted. A well-known example is given by the syntactic calculus of Lambek \cite{lambek:mathematics:58}, in which all the structural rules of exchange, weakening and contraction are disallowed. Variants of the Lambek calculus allow exchange or a cyclic form of exchange, while others disallow even associativity \cite{moot:logic:12}. In Girard's linear logic, which have been studied both in the presence and absence of an exchange rule \cite{girard:linear:87,abrusci:noncommutative:1990}, selective versions of weakening and contraction can be recorvered via the use of modalities. Application of substructural logics are abundant in a variety of different fields, from computational investigations of natural languages to the design and development of resource-aware programming languages.
 
-In recent years, we initiated a program intended to study a family of "semi-substructural" logics, inspired by developments in category theory by Szlachányi, Street, Bourke, Lack. Talk about skew monoidal categories and semi-associativity/semi-unitality and the skew notion of commutativity. Talk about connections to combinatorics via the work of Zeilberger on the Tamari order. We could also mentioned that Moortgat had also been interested in a semi-associative variant of the Lambek-Grishin calculus (http://cla.tcs.uj.edu.pl/history/2020/pdfs/CLA_slides_Moortgat.pdf)
+In recent years, in collaboration with Tarmo Uustalu and Noam Zeilberger, we initiated a program intended to study a family of \emph{semi-substructural} logics, inspired by developments in category theory by Szlach{\'a}nyi, Street, Bourke, Lack and others \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,street:skew-closed:2013,lack:triangulations:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,bourke:lack:braided:2020}. Korn{\'e}l Szlach\'anyi introduced \emph{skew monoidal categories} as a weakening of MacLane's monoidal categories in which the structural morphisms of associativity and unitality (often also called associator and unitors) are not required to be invertible, they are merely natural transformation in a particular direction. As such they can be considered \emph{semi-associative} and \emph{semi-unital} variants of monoidal categories. Bourke and Lack also introduced notions of braiding and symmetry for skew monoidal categories which involve three objects instead of two \cite{bourke:lack:braided:2020}. Skew monoidal categories arise naturally in semantics of programming languages \cite{altenkirch:monads:2014}, and semi-associativity has strong connections with combinatorial structures such as the Tamari lattice and Stasheff associahedra \cite{zeilberger:semiassociative:19,moortgat:tamari:20}
 
-So far the program has considered deductive systems for skew monoidal, skew closed and a combination of both. Also extensions with exchange and partial associativity/unitality. We have mostly been interested in categorical  and proof-theoretic semantics of the developed systems. For the latter, we have investigated normalization strategies inspired by Andreoli's focused sequent calculus for classical linear logic and used normal forms to solve the coherence/word problem for many categories with skew structure. For these categories, the word problem is more nuanced than in the normal non-skew case studied by MacLane. Our investigation also disclosed that the focused sequent calculi of semi-substructural logics can serve as a cornerstone for a compositional and modular understanding of normalization for other richer substructural logics.
+Semi-substructural logics correspond to the internal languages of skew monoidal categories and their extensions, which sit in-between (certain fragments of) non-associative and associative intuitionistic linear logic. Semi-associativity and semi-unitality can be hard-coded in the sequent calculus in two steps. First consider sequents of the form $S \mid \Gamma \vdash A$, where the antecedent is split into an optional formula $S$, which we call a stoup, and an ordered list of formulae $\Gamma$. The succedent consists of a single formula $A$. Then restrict the application of introduction rules to allow only one direction of associativity and unitality. For example, left-introduction rules are allowed to act only on the formula in stoup position, not on formulae in $\Gamma$. In our investigations we have explored deductive systems for $(i)$ skew semigroup \cite{zeilberger:semiassociative:19}, $(ii)$ skew monoidal \cite{uustalu:sequent:2021}, $(iii)$ skew (prounital) closed \cite{uustalu:deductive:nodate} and $(iv)$ skew monoidal closed categories \cite{UVW:protsn}, corresponding to skew variants of the fragments of non-commutative intuitionistic linear logic consisting of connectives $(i)$ $\otimes$, $(ii)$ $(\I,\otimes)$, $(iii)$ $\lolli$ and $(iv)$ $(\I,\otimes,\lolli)$.
+
+Also extensions with exchange and partial associativity/unitality. We have mostly been interested in categorical  and proof-theoretic semantics of the developed systems. For the latter, we have investigated normalization strategies inspired by Andreoli's focused sequent calculus for classical linear logic and used normal forms to solve the coherence/word problem for many categories with skew structure. For these categories, the word problem is more nuanced than in the normal non-skew case studied by MacLane. Our investigation also disclosed that the focused sequent calculi of semi-substructural logics can serve as a cornerstone for a compositional and modular understanding of normalization for other richer substructural logics.
 
 In this work we start looking at semi-structural logics with additive connectives. We consider a fragment of non-commutative linear logic consisting of skew multiplicative unit and conjunction, and additive conjunction and disjunction. We describe a cut-free sequent calculus and a congruence relation identifying derivations up-to eta-equivalence and permutative conversions. We discuss categorical semantics in terms of skew monoidal categories with binary products and coproducts. We introduce a sequent calculus of proofs in normal form, again inspired by the ideas of Andreoli, which describes a sound and complete root-first proof search strategy for the original sequent calculus. Talk about sequents being marked by list of tags, a novelty introduced to completely remove unnecessary non-determinism and faithfully capture normal forms wrt. the equivalence of derivations in the original sequent calculus. In a sense, this is similar to what proof nets are used for.
 
@@ -787,7 +789,8 @@ We expect that the tag annotations, which guarantee correct proof searches in th
 % We expect the tag annotations as guarantee of correct proof searches in this paper can nicely cooperate with the one in \cite{UVW:protsn} that tracks new formulae in context.
 
 
-\paragraph{Acknowledgements} 
+\paragraph{Acknowledgements}
+This work was supported by the Estonian Research Council grant PSG749.
 % N.V.\ and T.U.\ were supported by the
 % Estonian Research Council grants no. \linebreak PSG659, PSG749 and PRG1210, N.V.\ and
 % C.-S.W.\ by the ESF funded Estonian IT Academy research measure
