--- a/LSFA/LSFA.bib
+++ b/LSFA/LSFA.bib
@@ -401,3 +401,33 @@
 	volume = {358},
 	year = {2022}
 }
+
+@book{moot:logic:12,
+  author       = {Richard Moot and
+                  Christian Retor{\'{e}}},
+  title        = {The Logic of Categorial Grammars - {A} Deductive Account of Natural
+                  Language Syntax and Semantics},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {6850},
+  publisher    = {Springer},
+  year         = {2012},
+  doi          = {10.1007/978-3-642-31555-8}
+}
+
+@article{girard:linear:87,
+  author       = {Jean{-}Yves Girard},
+  title        = {Linear Logic},
+  journal      = {Theor. Comput. Sci.},
+  volume       = {50},
+  pages        = {1--102},
+  year         = {1987},
+  doi          = {10.1016/0304-3975(87)90045-4}
+}
+
+@misc{moortgat:tamari:20,
+  author = {Michael Moortgat},
+  title = {The {T}amari order for $D^3$ and derivability in semi-associative {L}ambek-{G}rishin {C}alculus},
+  howpublished = {Talk at 16th Wksh. on Computational Logic and Applications (CLA'20)},
+  year = {2020},
+  note = {Slides available at: \url{http://cla.tcs.uj.edu.pl/history/2020/pdfs/CLA_slides_Moortgat.pdf}}
+}
