--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -119,15 +119,23 @@ Substructural logics are logical systems in which the usage of one or more struc
 
 In recent years, in collaboration with Tarmo Uustalu and Noam Zeilberger, we initiated a program intended to study a family of \emph{semi-substructural} logics, inspired by developments in category theory by Szlach{\'a}nyi, Street, Bourke, Lack and others \cite{szlachanyi:skew-monoidal:2012,lack:skew:2012,street:skew-closed:2013,lack:triangulations:2014,buckley:catalan:2015,bourke:skew:2017,bourke:skew:2018,bourke:lack:braided:2020}. Korn{\'e}l Szlach\'anyi introduced \emph{skew monoidal categories} as a weakening of MacLane's monoidal categories in which the structural morphisms of associativity and unitality (often also called associator and unitors) are not required to be invertible, they are merely natural transformation in a particular direction. As such they can be considered \emph{semi-associative} and \emph{semi-unital} variants of monoidal categories. Bourke and Lack also introduced notions of braiding and symmetry for skew monoidal categories which involve three objects instead of two \cite{bourke:lack:braided:2020}. Skew monoidal categories arise naturally in semantics of programming languages \cite{altenkirch:monads:2014}, and semi-associativity has strong connections with combinatorial structures such as the Tamari lattice and Stasheff associahedra \cite{zeilberger:semiassociative:19,moortgat:tamari:20}
 
-Semi-substructural logics correspond to the internal languages of skew monoidal categories and their extensions, which sit in-between (certain fragments of) non-associative and associative intuitionistic linear logic. Semi-associativity and semi-unitality can be hard-coded in the sequent calculus in two steps. First consider sequents of the form $S \mid \Gamma \vdash A$, where the antecedent is split into an optional formula $S$, which we call a stoup, and an ordered list of formulae $\Gamma$. The succedent consists of a single formula $A$. Then restrict the application of introduction rules to allow only one direction of associativity and unitality. For example, left-introduction rules are allowed to act only on the formula in stoup position, not on formulae in $\Gamma$. In our investigations we have explored deductive systems for $(i)$ skew semigroup \cite{zeilberger:semiassociative:19}, $(ii)$ skew monoidal \cite{uustalu:sequent:2021}, $(iii)$ skew (prounital) closed \cite{uustalu:deductive:nodate} and $(iv)$ skew monoidal closed categories \cite{UVW:protsn}, corresponding to skew variants of the fragments of non-commutative intuitionistic linear logic consisting of connectives $(i)$ $\otimes$, $(ii)$ $(\I,\otimes)$, $(iii)$ $\lolli$ and $(iv)$ $(\I,\otimes,\lolli)$.
+Semi-substructural logics correspond to the internal languages of skew monoidal categories and their extensions, which sit in-between (certain fragments of) non-associative and associative intuitionistic linear logic. Semi-associativity and semi-unitality can be hard-coded in the sequent calculus in two steps. First consider sequents of the form $S \mid \Gamma \vdash A$, where the antecedent is split into an optional formula $S$, which we call a stoup, and an ordered list of formulae $\Gamma$. The succedent consists of a single formula $A$. Then restrict the application of introduction rules to allow only one direction of associativity and unitality. For example, left-introduction rules are allowed to act only on the formula in stoup position, not on formulae in $\Gamma$.
 
-Also extensions with exchange and partial associativity/unitality. We have mostly been interested in categorical  and proof-theoretic semantics of the developed systems. For the latter, we have investigated normalization strategies inspired by Andreoli's focused sequent calculus for classical linear logic and used normal forms to solve the coherence/word problem for many categories with skew structure. For these categories, the word problem is more nuanced than in the normal non-skew case studied by MacLane. Our investigation also disclosed that the focused sequent calculi of semi-substructural logics can serve as a cornerstone for a compositional and modular understanding of normalization for other richer substructural logics.
+In our investigations we have explored deductive systems for $(i)$ skew semigroup \cite{zeilberger:semiassociative:19}, $(ii)$ skew monoidal \cite{uustalu:sequent:2021}, $(iii)$ skew (prounital) closed \cite{uustalu:deductive:nodate} and $(iv)$ skew monoidal closed categories \cite{UVW:protsn}, corresponding to skew variants of the fragments of non-commutative intuitionistic linear logic consisting of connectives $(i)$ $\otimes$, $(ii)$ $(\I,\otimes)$, $(iii)$ $\lolli$ and $(iv)$ $(\I,\otimes,\lolli)$. We have also studied partial normality conditions, when one or more among associator and unitors is allowed to have an inverse \cite{uustalu:proof:nodate}, and extensions with exchange {\`a} la Bourke and Lack \cite{veltri:coherence:2021}.
 
-In this work we start looking at semi-structural logics with additive connectives. We consider a fragment of non-commutative linear logic consisting of skew multiplicative unit and conjunction, and additive conjunction and disjunction. We describe a cut-free sequent calculus and a congruence relation identifying derivations up-to eta-equivalence and permutative conversions. We discuss categorical semantics in terms of skew monoidal categories with binary products and coproducts. We introduce a sequent calculus of proofs in normal form, again inspired by the ideas of Andreoli, which describes a sound and complete root-first proof search strategy for the original sequent calculus. Talk about sequents being marked by list of tags, a novelty introduced to completely remove unnecessary non-determinism and faithfully capture normal forms wrt. the equivalence of derivations in the original sequent calculus. In a sense, this is similar to what proof nets are used for.
+When studying meta-theretic properties of these semi-structural deductive systems, we have been mostly interested in categorical and proof-theoretic semantics. In the latter, we have particularly investigated normalization strategies inspired by Andreoli's focused sequent calculus for classical linear logic \cite{andreoli:logic:1992} and employed the resulting normal forms to solve the \emph{coherence problem} for the corresponding categories with skew structure. For the latter categories, the word problem is more nuanced than in the normal non-skew case studied by MacLane \cite{maclane1963natural}. Our study also revealed that the focused sequent calculi of semi-substructural logics can serve as cornerstones for a compositional and modular understanding of normalization techniques for other richer substructural logics.
 
-To showcase the modularity of our approach to normalization, we discuss extensions of the logic with other connectives, such as additive units and implication, and other structural rules. The work presented in Sections ... has been formalized in the Agda proof assistant and it is available at: .... We conclude our paper with a brief discussion on the formalization strategy.
+In this work we begin the investigation of  semi-substructural logics with \emph{additive connectives}. We start in Section \ref{sec:sequent-calculus} by considering a fragment of non-commutative linear logic consisting of skew multiplicative unit $\I$ and conjunction $\ot$, and additive conjunction $\land$ and disjunction $\lor$. We describe a cut-free sequent calculus and a congruence relation identifying derivations up-to $\eta$-equivalence and permutative conversions. In Section \ref{sec:categorical}, we discuss categorical semantics in terms of skew monoidal categories with binary products and coproducts. In Section \ref{sec:focusing}, we subsequently introduce a sequent calculus of proofs in normal form, again inspired by the ideas of Andreoli, which describes a sound and complete root-first proof search strategy for the original sequent calculus. Completeness is achieved by marking sequents with lists of \emph{tags}, a mechanism introduced by Uustalu et al. \cite{UVW:protsn} and inspired by Scherer and R{\'e}my's saturation technique \cite{scherer:simple:2015}, which help to  eliminate completely all unnecessary non-determinism in proof search and faithfully capture normal forms wrt. the congruence relation on derivations in the original sequent calculus. %In a sense, this is similar to what proof nets are used for.
 
-\section{Sequent calculus}
+To showcase the modularity of our normalization strategy, in Section \ref{sec:extensions} we discuss extensions of the logic with other connectives, such as additive units and implication, and other structural rules, such has partial normality conditions and exchange {\`a} la Bourke and Lack.
+
+The sequent calculi of Sections \ref{sec:sequent-calculus} and \ref{sec:focusing}, as well as the effective normalization procedure, have been formalized in the Agda proof assistant. The code is freely available at
+%\begin{center}
+  \url{https://github.com/cswphilo/FormalizationSKewMonCloCat}.
+%\end{center}
+We briefly comment on some of the design choices and reflect on the formalization experience in Section \ref{sec:formalization}. 
+
+\section{Sequent Calculus}\label{sec:sequent-calculus}
 We introduce a sequent calculus for a skew variant of non-commutative multiplicative intuitionistic linear logic with additive conjunction and disjunction.
 
 Formulae are inductively generated by the grammar $A,B ::= X \ | \ \I \ | \ A \ot B \ | \ A \land B \ | \ A \lor B$ over a infinitely countable set $\mathsf{At}$ of atomic formulae. 
@@ -380,7 +388,10 @@ We define a congruence relation $\circeq$ on the sets of derivations generated b
   The first four equations ($\eta$-conversion) characterize the $\ax$ rule for non-atomic formulae.
   The remaining equations are permutative conversions. The congruence $\circeq$ has been carefully chosen to serve as the proof-theoretic counterpart of the equational theory of skew monoidal categories with products and coproducts.
   % , introduced in Definition \ref{def:skewcat}. The subsystem of equations involving only $(\I,\ot)$ originated in \cite{uustalu:sequent:2021} while the subsystem involving only $\lolli$ is from \cite{uustalu:deductive:nodate}.
-\section{A focused sequent calculus with tag annotations}
+
+\section{Categorical Semantics}\label{sec:categorical}
+  
+  \section{A Focused Sequent Calculus with Tag Annotations}\label{sec:focusing}
 We consider the proof normal forms of (\ref{eq:seqcalc}).
 Similar to the strategy in \cite{UVW:protsn}, for any sequent $S \mid \Gamma \vdash A$, proof search proceeds as: we apply right invertible rules on the sequent until the principal connective of the succedent is inappropriate then apply left invertible rules until the stoup is either empty or inappropriate.
 At this stage, only non-invertible rules can be applied, so the question is: how to arrange the order between non-invertible rules without causing undesired non-determinism and losing completeness with respect to (\ref{eq:seqcalc})?
@@ -551,6 +562,7 @@ $\sw$ is an abbreviation of multiple phase switching rules.
 Notice that the list of tags is not pre-determined when a right non-invertible rule is applied.
 For example, the proof search in (\ref{eq:ex:tag:focused}) actually proceeds as: we apply $\orrone$ and assume that there is a valid list of tags. We continue the proof search and apply the $\andli$ in the tagged phase. When the proof tree closes, we concatenate the singleton list from the leftmost sequent to right and check whether the result list is valid.
 In this case, $[ \tL , \tR ]$ is valid.
+
 \subsection{Meta properties of the focused calculus}
 \begin{theorem}\label{theorem:focus:sound:complete}
   The focused calculus is sound and complete with the sequent calculus (\ref{eq:seqcalc}).
@@ -776,6 +788,11 @@ Moreover, one can prove that $\mathsf{emb}_{\RI}$ and $\mathsf{focus}$ are inver
 \begin{proof}
   By structural induction on derivations.
 \end{proof}
+
+\section{Extensions of the Logic}\label{sec:extensions}
+
+\section{Formalization}\label{sec:formalization}
+
 
 \section{Conclusion}
 The paper presents an additive extension of the sequent calculus in \cite{uustalu:sequent:2021}, whose categorical interpretation is skew monoidal categories with products and coproducts.
